--- a/Grinder/Grinder.vcxproj
+++ b/Grinder/Grinder.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="ScrollField.cpp" />
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="MapRenderer.cpp" />
+    <ClCompile Include="TextManager.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
