--- a/Grinder/Grinder.vcxproj.filters
+++ b/Grinder/Grinder.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Configuration.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="TextManager.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Random.hpp">
