--- a/Grinder/Grinder.vcxproj
+++ b/Grinder/Grinder.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Configuration.cpp" />
     <ClCompile Include="Container.cpp" />
     <ClCompile Include="FrameRate.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Grinder.cpp" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="RenderObject.cpp" />
