--- a/Grinder/Grinder.vcxproj.filters
+++ b/Grinder/Grinder.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="TextManager.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Random.hpp">
